--- a/apple.html
+++ b/apple.html
@@ -147,12 +147,13 @@
         <a href="gorge" class="dot6"></a>
       </div>
       <div class="gallery">
-        <div class="goat">inroducing the goat</div>
+        <div class="goat">Introducing the goat</div>
         <div class="nba">2k25 best player</div>
-        <div class="football">football manager touch 2025</div>
+        <div class="rb"></div>
+        <div class="football">Celebrate with us</div>
         <div class="rose">rose album</div>
         <div class="arcade"></div>
-        <div class="rb"></div>
+
         <div class="sport"></div>
         <div class="gradient"></div>
       </div>
